# avro-cpp

./: meson.build
impl/: demo.cc
